Corrected H1 alignment issue
Removed padding-left

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@ h1, h2, h3 {
 h1 {
   padding-top: 10px;
   padding-bottom: 30px;
-  padding-left: 75px;
   color: #fff;
   font-size: calc((3.1 - 1) * 1.2vw + 1rem);
 }
